package eapli.ecourse.exammanagement.domain;

public class SectionName {

}
